styles/style.css
.page {
  min-width: 1100px;
  /* мы ещё не умеем делать мобильную версию сайта, */
  /* поэтому выше установлена минимальная ширина страницы */
  max-width: 1600px;
  /* выше установили ограничение по максимальной ширине */
  margin: 0 auto;
  /* выше для экранов больше 1600px отцентрировали весь контент */
  font-family: 'Helvetica Neue', Arial, sans-serif;
}

.header {
  height: 100vh;
  min-height: 600px;
  max-height: 756px;
  /* выше установили ограничения для секции */
  background-color: #f2f2f2;
  display: flex;
  align-items: center;
  position: relative;
}

/* ниже мы привели пример двух селекторов, чтобы вы вспомнили запись элемента */
/* .header__square-pic {
  height: 568px;
  width: 568px;
} */

/* и элемента с модификатором вида ключ-значение */
/* .table__cell_theme_dark {
  width: 200px;
  color: white;
  margin-right: 0;
  margin-top: 80px;
} */

h1, h2, h3, h4, h5, h6, p {
  margin: 0;
}

.logo_place_header {
  background: url(../images/logo_place_header.svg);
  background-repeat: no-repeat;
  position: absolute;
  top: 30px;
  left: 64px;
  width: 183px;
  height: 32px;
}

.header__title {
  width: 730px;
  font-size: 102px;
  line-height: 96px;
  font-weight: 700;
  margin-left: 64px;
}

.header__subtitle {
  position: absolute;
  width: 388px;
  bottom: 30px;
  left: 64px;
  line-height: 25px;
  font-size: 18px;
  font-weight: 400;
}

.link {
  text-decoration: none;
  color: #2f80ed;
}

.header__main-illustration {
  width: 765px;
  height: 608px;
  background: url(../images/header-image.png);
  background-size: cover;
  position: absolute;
  right: 0;
  bottom: 0;
  z-index: 1;
}

.header__square-pic {
  width: 568px;
  height: 568px;
  background-color: #2f80ed;
  position: absolute;
  right: 0;
  top: 64px;
}

.description {
  display: flex;
  justify-content: center;
  margin-top: 100px;
}

.two-columns {
  width: 80%;
  display: flex;
  justify-content: space-between;
}

.two-columns__brif {
  width: 175px;
  color: #2f80ed;
  line-height: 1.2;
  font-size: 18px;
  font-weight: 400;
}

.two-columns__main-text {
  width: 80%;
  min-width: 784px;
}

.two-columns__paragraph {
  line-height: 34px;
  font-size: 24px;
  font-weight: 400;
  margin-bottom: 30px;
}

.two-columns__paragraph:last-child {
  margin-bottom: 0;
}

.two-columns__span-accent {
  line-height: 34px;
  font-size: 24px;
  font-weight: 700;
}

section.digits {
  margin-top: 100px;
}

.section-title {
  width: 60%;
  margin: 0 auto 20px auto;
  text-align: center;
  line-height: 1.15;
  font-size: 60px;
  font-weight: 700;
}

.section-subtitle {
  width: 60%;
  margin: 0 auto;
  text-align: center;
  line-height: 34px;
  font-size: 24px;
  font-weight: 400;
}

.table {
  width: 1100px;
  display: flex;
  margin: auto;
  flex-wrap: wrap;
  justify-content: space-between;
}

.table__cell {
  width: 250px;
  margin-top: 60px;
}

.table__heading {
  line-height: 1.15;
  font-size: 24px;
  font-weight: 700;
}

.table__text {
  line-height: 1.2;
  font-size: 18px;
  font-weight: 400;
  margin-top: 20px;
}

.feynman {
  background: url(../images/feynman.png);
  background-repeat: no-repeat;
  background-size: 867px 637px;
  background-position-y: bottom;
  background-color: #f2f2f2;
  display: flex;
  flex-direction: column;
  align-items: center;
  position: relative;
  min-height: 650px;
  padding-top: 100px;
  margin-top: 100px;
}

.feynman__title {
  width: 648px;
  margin: 0 auto;
  line-height: 1.1;
  font-size: 120px;
  font-weight: 700;
  text-align: center;
  margin-bottom: 70px;
}

.feynman__subtitle {
  line-height: 51px;
  font-size: 36px;
  font-weight: 400;
}

.feynman__link {
  line-height: 51px;
  font-size: 36px;
  font-weight: 400;
  position: absolute;
  right: 40px;
  top: 50%;
}

.kaufman {
  background-color: #1f1f1f;
  padding: 90px 0;
  position: relative;
  overflow: hidden;
  z-index: 1;
}

.section-title_theme_dark {
  color: #fff;
}

.section-subtitle_theme_dark {
  color: #fff;
}

.table_theme_dark { 

}

.table__cell_theme_dark {
  color: #fff;
  width: 200px;
  margin-top: 80px;
}

.kaufman__triangle {
  background: url(../images/kaufman-triangle.svg);
  width: 877px;
  height: 877px;
  background-size: 877px 877px;
  position: absolute;
  top: 0;
  right: -210px;
  z-index: -1;
}

